tests/invalid/Fail_Invalid_2.whiley
function incr(int x) -> int:
  fail
  return x + 1